--- a/login.html
+++ b/login.html
@@ -209,5 +209,15 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  // Example: Show an alert on form submission
+  document.querySelector("form").addEventListener("submit", function(event) {
+    event.preventDefault(); // prevent actual form submission for demo
+    const email = document.getElementById("email").value;
+    alert("Logging in with email: " + email);
+    // In a real app, remove the event.preventDefault() to allow actual login
+  });
+</script>
+
 </body>
 </html>
