--- a/request.html
+++ b/request.html
@@ -71,7 +71,7 @@
       font-family: 'Playfair Display', serif;
       font-size: 2.2rem;
       font-weight: 600;
-      color: #5d4037;
+      color: #6d4c41;
       text-align: center;
       margin-bottom: 30px;
     }
@@ -165,5 +165,27 @@
 
   <!-- Bootstrap Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  // When the form is submitted
+  document.querySelector("form").addEventListener("submit", function(event) {
+    const offered = document.getElementById("offeredSkill").value;
+    const wanted = document.getElementById("wantedSkill").value;
+    const message = document.getElementById("message").value;
+
+    // Validate: Offered and wanted skill should not be the same
+    if (offered === wanted) {
+      alert("⚠️ Offered and wanted skills cannot be the same!");
+      event.preventDefault(); // Prevent submission
+      return;
+    }
+
+    // Optional: Show confirmation (for demo; remove in production)
+    alert("✅ Request sent successfully! 🎉");
+
+    // Optional: Reset the form
+    // event.target.reset();
+  });
+</script>
+
 </body>
 </html>  
