--- a/HomePage.html
+++ b/HomePage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo">Skill Swap</div>
-    <button class="login-btn">Login</button>
+    <a href="Loginform.html"><button class="login-btn">Login</button></a>
   </header>
 
   <section class="search-bar">
