--- a/request.html
+++ b/request.html
@@ -135,9 +135,10 @@
       <div class="form-floating mb-4">
         <select class="form-select" id="offeredSkill" name="offered_skill" required>
           <option value="" selected disabled>Choose your skill</option>
-          <option value="coding">Coding</option>
-          <option value="art">Art</option>
-          <option value="music">Music</option>
+          <option value="Video Editing">Video Editing</option>
+          <option value="Photoshop">Photoshop</option>
+          <option value="Code Editor">Code Editor</option>
+          <option value="Graphic Editing">Graphic Editing</option>
         </select>
         <label for="offeredSkill">Your Offered Skill</label>
       </div>
@@ -145,9 +146,11 @@
       <div class="form-floating mb-4">
         <select class="form-select" id="wantedSkill" name="wanted_skill" required>
           <option value="" selected disabled>Choose desired skill</option>
-          <option value="language">Language</option>
-          <option value="video">Video Editing</option>
-          <option value="writing">Writing</option>
+          <option value="python">python</option>
+          <option value="JavaScript">JavaScript</option>
+          <option value="C++">C++</option>
+          <option value="Code Editor">Code Editor</option>
+          <option value="Editor">Editor</option>
         </select>
         <label for="wantedSkill">Skill You Want</label>
       </div>
