--- a/HomePage.html
+++ b/HomePage.html
@@ -10,6 +10,7 @@
   <header>
     <div class="logo">Skill Swap</div>
     <a href="Loginform.html"><button class="login-btn">Login</button></a>
+    <a href="SignIn.html"><button class="login-btn">Signin</button></a>
   </header>
 
   <section class="search-bar">
@@ -20,6 +21,7 @@
     </select>
     <input type="text" placeholder="Search skills or users">
     <button class="search-btn">Search</button>
+
   </section>
 
   <main class="user-list">
