--- a/Userprofile.html
+++ b/Userprofile.html
@@ -173,7 +173,7 @@
     <div class="header">
         <div class="platform-name">Skill Swap Platform</div>
         <div class="nav">
-            <a href="#" class="nav-item active">Swap request</a>
+            <a href="Request.html" class="nav-item active">Swap request</a>
             <a href="UserHome.html" class="nav-item">Home</a>
             <div class="account-icon">A</div>
         </div>
